# competitive-intelligence-agent

./: .env.template  .gitignore  README.md  pyproject.toml
docs/: README.md  technical-statement.md
docs/explainer/: explainer-build-log.md  explainer-coding-agent-summary.md  explainer-summary.md
docs/runbooks/: run-evaluations.md  run-generate-intel.md
eval/: cases.yaml  harness.py
examples/: generate_sample.py  sample_brief.md  sample_output.md
src/competitive_intel/: __init__.py  cli.py  config.py
src/competitive_intel/evals/: __init__.py  evaluation.py
src/competitive_intel/models/: __init__.py  models.py
src/competitive_intel/observability/: __init__.py  observability.py
src/competitive_intel/pipeline/: ledger.py  orchestrator.py  plan.py  render.py  rerank.py  retrieve.py  synthesize.py  verify.py
src/competitive_intel/tools/: __init__.py  tavily_mcp.py  tavily_tools.py
tests/: conftest.py  test_evals_observability.py  test_rag_agent.py
