[project]
name = "competitive-intel-agent"
version = "0.1.0"
description = "Finance-grade competitive intelligence brief generator built on Tavily + LangChain (Hybrid RAG with Evidence Fusion, deterministic verification, and Logfire/OpenTelemetry observability)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-tavily>=0.2.0",
    "logfire[httpx]>=3.0.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
mcp = ["langchain-mcp-adapters>=0.1.0"]

[project.scripts]
competitive-intel = "competitive_intel.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/competitive_intel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
